# ledger-live

./: .babelrc  .ci.env  .cursorrules  .detoxrc.json  .env  .env.adhoc  .env.mock  .env.mocktesting  .env.production  .env.staging  .eslintignore  .eslintrc  .eslintrc.js  .eslintrc.json  .flowconfig  .gitignore  .gitleaks.toml  .npmrc  .oxfmtrc.json  .oxlintrc.json  .pnpmfile.cjs  .prettierignore  .prettierrc  .prototools  .tool-versions  .travis.yml  ADB.js  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS.md  GUIDELINES.md  Gemfile  LICENSE.txt  README.md  SHARED_PROPS_ANALYSIS.md  TERMS.es.md  TERMS.fr.md  TERMS.md  (+72 more)
.LIB_TEMPLATE/: jest.config.ts  package.json  tsconfig.json
.bundle/: config
.changeset/: adapt-e2e-wallet40.md  add-altcoin-season-index-endpoint.md  add-card-landing-page.md  add-e2e-main-navigation-tests.md  add-e2e-pr-checklist-workflow.md  add-lumen-rnative-visualization-mobile.md  add-market-e2e-tests.md  add-tab-bar-visibility-hooks.md  afraid-actors-fry.md  afraid-avocados-kneel.md  afraid-bats-join.md  afraid-beers-cough.md  afraid-beers-reply.md  afraid-bottles-compete.md  afraid-brooms-dance.md  afraid-candles-build.md  afraid-cats-talk.md  afraid-cups-cross.md  afraid-cycles-shave.md  afraid-days-serve.md  afraid-elephants-fry.md  afraid-experts-brush.md  afraid-eyes-unite.md  afraid-falcons-eat.md  afraid-hairs-travel.md  afraid-houses-grin.md  afraid-insects-scream.md  afraid-keys-tie.md  afraid-lemons-train.md  afraid-lions-attack.md  (+8209 more)
cli/: README.md  (+7 more)
libs/coin-modules/zcash-shielded/decrypt/: .gitignore  Cargo.toml  lib.rs
(+35269 files in other folders)
