[package]
name = "decrypt"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[dependencies]
# WASM essentials
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

hex = "0.4.3"

# note: to use `uuid` on `wasm32-unknown-unknown`, specify a source of randomness using one of the `js`, `rng-getrandom`, or `rng-rand` features
uuid = { version = "1.20", features = ["js"] }
zcash_address = "0.10.1"
zcash_client_backend = { version = "0.21.0", features = ["orchard"]  }
zcash_keys = "0.12.0"
zcash_primitives = { version = "0.26.4", default-features = false }
zcash_protocol = "0.7.2"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-test = "0.3.58"
